# PTS_Server

./: Server_Activate  config.py  crawler.py  handler.py  main.py  newcv.py  newcv.py_bk  response.py  util.py
cdvs/CDVS_evaluation_framework/: .autotools  .cproject  .project  AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  NEWS  README  build.sh  build_debug.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
cdvs/CDVS_evaluation_framework/Doxygen/: createDoc.sh  doxygen.cfg  doxylinux.cfg  main.main
cdvs/CDVS_evaluation_framework/Doxylib/: cdvslib.cfg  createDoc.sh  main.main  update.sh
cdvs/CDVS_evaluation_framework/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
cdvs/CDVS_evaluation_framework/cssc_train/: Makefile.am  cssc_train.cpp
cdvs/CDVS_evaluation_framework/deployment.express/all_projects/: all_projects.sln
cdvs/CDVS_evaluation_framework/deployment.express/cdvslib/: cdvslib.vcxproj  cdvslib.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment.express/extract/: extract.vcxproj  extract.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment.express/joinIndices/: joinIndices.vcxproj  joinIndices.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment.express/jpeg-8c/: jpeg-8c.vcxproj  jpeg-8c.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment.express/match/: match.vcxproj  match.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment.express/mkindex/: mk_index.vcxproj  mk_index.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment.express/retrieve/: retrieve.vcxproj  retrieve.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment.express/vlfeatlib/: vlfeatlib.vcxproj  vlfeatlib.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment/all_projects/: all_projects.sln
cdvs/CDVS_evaluation_framework/deployment/cdvslib/: cdvslib.vcxproj  cdvslib.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment/extract/: extract.vcxproj  extract.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment/extract-interop/: extract-interop.vcxproj
cdvs/CDVS_evaluation_framework/deployment/joinIndices/: joinIndices.vcxproj  joinIndices.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment/jpeg-8c/: jpeg-8c.vcxproj  jpeg-8c.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment/libcdvs_main/: libcdvs_main.vcxproj  libcdvs_main.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment/match/: match.vcxproj  match.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment/mkindex/: mk_index.vcxproj  mk_index.vcxproj.filters
cdvs/CDVS_evaluation_framework/deployment/retrieve/: retrieve.vcxproj  retrieve.vcxproj.filters
cdvs/CDVS_evaluation_framework/docs/: CDVS-build-run-instructions.odt
cdvs/CDVS_evaluation_framework/lib/: CdvsClientBflog.cpp  CdvsClientBflog.h  CdvsClientImpl.cpp  CdvsClientImpl.h  CdvsClientLowMem.cpp  CdvsClientLowMem.h  CdvsConfigurationImpl.cpp  CdvsConfigurationImpl.h  CdvsInterface.cpp  CdvsInterface.h  CdvsServerImpl.cpp  CdvsServerImpl.h  Makefile  Makefile.am  Makefile.in  libcdvs_bflog.la  libcdvs_bflog_la-CdvsClientBflog.lo  libcdvs_bflog_la-CdvsClientImpl.lo  libcdvs_bflog_la-CdvsConfigurationImpl.lo  libcdvs_bflog_la-CdvsInterface.lo  libcdvs_bflog_la-CdvsServerImpl.lo  libcdvs_lowmem_la-CdvsClientImpl.lo  libcdvs_lowmem_la-CdvsClientLowMem.lo  libcdvs_lowmem_la-CdvsConfigurationImpl.lo  libcdvs_lowmem_la-CdvsInterface.lo  libcdvs_lowmem_la-CdvsServerImpl.lo  libcdvs_main.la  libcdvs_main_la-CdvsClientImpl.lo  libcdvs_main_la-CdvsConfigurationImpl.lo  libcdvs_main_la-CdvsInterface.lo  libcdvs_main_la-CdvsServerImpl.lo
cdvs/CDVS_evaluation_framework/lib/.deps/: libcdvs_bflog_la-CdvsClientBflog.Plo  libcdvs_bflog_la-CdvsClientImpl.Plo  libcdvs_bflog_la-CdvsConfigurationImpl.Plo  libcdvs_bflog_la-CdvsInterface.Plo  libcdvs_bflog_la-CdvsServerImpl.Plo  libcdvs_lowmem_la-CdvsClientImpl.Plo  libcdvs_lowmem_la-CdvsClientLowMem.Plo  libcdvs_lowmem_la-CdvsConfigurationImpl.Plo  libcdvs_lowmem_la-CdvsInterface.Plo  libcdvs_lowmem_la-CdvsServerImpl.Plo  libcdvs_main_la-CdvsClientImpl.Plo  libcdvs_main_la-CdvsConfigurationImpl.Plo  libcdvs_main_la-CdvsInterface.Plo  libcdvs_main_la-CdvsServerImpl.Plo
cdvs/CDVS_evaluation_framework/lib/.libs/: libcdvs_bflog.lai  libcdvs_lowmem.la  libcdvs_lowmem.lai  libcdvs_main.lai  libcdvs_main.so.0.0.0
cdvs/CDVS_evaluation_framework/libraries/: Makefile  Makefile.am  Makefile.in
cdvs/CDVS_evaluation_framework/libraries/Distrat/: DistratEigen.cpp  DistratEigen.h  (+4 more)
cdvs/CDVS_evaluation_framework/run/: INSTALL.txt  README-perl.txt  checkmd5.bat  checkmd5.sh  concurrency.pl  conf-interop.pl  conf.pl  create-virtual-dataset.sh  parameters.interop.txt  parameters.txt  run-all-interop.bat  run-all-interop.sh  run-all-perl.bat  run-all-perl.sh  run-extract-db.pl  run-extract-interop.pl  run-extract.pl  run-match-interop.pl  run-match-trace-oneway.pl  run-match-trace.pl  run-match.pl  run-mkindex.pl  run-retrieval-interop.pl  run-retrieval-oneway.pl  run-retrieval.pl  slash-converter.sh
cdvs/CDVS_evaluation_framework/shared/: AbstractDetector.h  AlpDetector.cpp  AlpDetector.h  AlpDetectorBF.cpp  AlpDetectorBF.h  AlpDetectorLowMem.cpp  AlpDetectorLowMem.h  AlpOctave.cpp  AlpOctave.h  AlpOctaveBF.cpp  AlpOctaveBF.h  ArithmeticCoding.cpp  ArithmeticCoding.h  BoundingBox.cpp  BoundingBox.h  BoundingBox.lo  Buffer.cpp  Buffer.h  CdvsDescriptor.cpp  CdvsDescriptor.h  CdvsException.h  CdvsPoint.h  CsscCoordinateCoding.cpp  CsscCoordinateCoding.h  Database.cpp  Database.h  Feature.cpp  Feature.h  FeatureList.cpp  FeatureList.h  FileManager.cpp  FileManager.h  FileManager.lo  ImageBuffer.cpp  ImageBuffer.h  Makefile  Makefile.am  Makefile.in  Match.h  Parameters.cpp  (+35 more)
cdvs/CDVS_evaluation_framework/src/: Makefile  Makefile.am  Makefile.in  extract  extract.cpp  joinIndices  joinIndices.cpp  makeIndex  makeIndex.cpp  match  match.cpp  retrieve  retrieve.cpp
cdvs/CDVS_evaluation_framework/src-interop/: Makefile  Makefile.am  Makefile.in  README.txt  SiftDetector.cpp  SiftDetector.h  extract_interop  extract_interop.cpp
(+262 files in other folders)
