bin_PROGRAMS = cssc_train
cssc_train_SOURCES = cssc_train.cpp
cssc_train_CPPFLAGS = -I$(srcdir)/../lib -I$(srcdir)/../shared -I$(srcdir)/../libraries -I$(srcdir)/../libraries/timer -I$(srcdir)/../libraries/map -I$(srcdir)/../libraries/bitstream/src -I$(srcdir)/../shared -I$(srcdir)/../libraries/vlfeat -I$(srcdir)/../libraries/resampler 
cssc_train_LDADD = ../lib/libcdvs_main.la ../shared/libeval.la
