bin_PROGRAMS = extract_interop

extract_interop_SOURCES = extract_interop.cpp SiftDetector.cpp SiftDetector.h
extract_interop_CPPFLAGS = -I$(srcdir)/../lib -I$(srcdir)/../shared -I$(srcdir)/../libraries/bitstream/src -I$(srcdir)/../libraries/vlfeat -I$(srcdir)/../libraries/timer 
extract_interop_LDADD = ../lib/libcdvs_main.la ../shared/libeval.la ../libraries/timer/libtimer.la -ljpeg -lrt




