noinst_LTLIBRARIES = libvlfeat.la

libvlfeat_la_SOURCES = aib.c array.c dsift.c generic.c getopt_long.c hikmeans.c homkermap.c host.c ikmeans.c imopv.c imopv_sse2.c kdtree.c kmeans.c lbp.c mathop.c \
mathop_sse2.c mser.c pegasos.c pgm.c quickshift.c random.c rodrigues.c sift.c slic.c stringop.c \
aib.h array.h dsift.h generic.h getopt_long.h heap-def.h hikmeans.h homkermap.h host.h ikmeans.h imopv.h imopv_sse2.h kdtree.h kmeans.h lbp.h mathop.h mathop_sse2.h mser.h \
pegasos.h pgm.h qsort-def.h quickshift.h random.h rodrigues.h shuffle-def.h sift.h slic.h stringop.h \
ikmeans_elkan.tc ikmeans_init.tc ikmeans_lloyd.tc float.th

libvlfeat_la_CPPFLAGS = -DVL_DISABLE_THREADS
